# dl_lecture_competition_pub

./: main.py  pyproject.toml  test.py
configs/: config.yaml
src/: datasets_v1.py  datasets_v2.py  models.py  models_v1.py
